crates/toml_edit/tests/fixtures/invalid/key/dotted-redefine-table.stderr
TOML parse error at line 4, column 1
  |
4 | a.b.c = 2
  | ^
Dotted key `a.b` attempted to extend non-table type (integer)
